--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -41,28 +41,38 @@
         android:orientation="vertical"
         android:padding="24dp">
 
-        <EditText
-            android:id="@+id/username_login"
-            android:inputType="textPersonName"
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="44dp"
-            android:paddingHorizontal="12dp"
-            android:hint="Username"
-            android:background="@drawable/et_background"
-            android:layout_marginVertical="8dp"
-            android:textColor="@color/black" />
-        <EditText
-            android:id="@+id/password_login"
-            android:inputType="textPassword"
+            android:layout_height="wrap_content">
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/username_login"
+                android:inputType="textPersonName"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:paddingHorizontal="12dp"
+                android:hint="Username"
+                android:background="@drawable/et_background"
+                android:layout_marginVertical="8dp"
+                android:textColor="@color/black" />
+        </com.google.android.material.textfield.TextInputLayout>
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="44dp"
-            android:paddingHorizontal="12dp"
-            android:hint="Password"
-            android:background="@drawable/et_background"
-            android:layout_marginVertical="8dp"
-            android:textColor="@color/black" />
+            android:layout_height="wrap_content"
+            app:passwordToggleEnabled="true">
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/password_login"
+                android:inputType="textPassword"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:paddingHorizontal="12dp"
+                android:hint="Password"
+                android:background="@drawable/et_background"
+                android:layout_marginVertical="8dp"
+                android:textColor="@color/black" />
+        </com.google.android.material.textfield.TextInputLayout>
 
         <Button
+            android:id="@+id/btn_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="8dp"
@@ -81,10 +91,13 @@
                 android:layout_marginRight="2dp"
                 android:textColor="@color/black" />
             <TextView
+                android:id="@+id/btn_signup"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Sign Up"
-                android:textColor="@color/red_200" />
+                android:textColor="@color/red_200"
+                android:clickable="true"
+                android:onClick="jumpToRegister"/>
         </LinearLayout>
 
     </LinearLayout>
