--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,7 +6,7 @@
         <item name="colorPrimary">@color/red_200</item>
         <item name="colorPrimaryVariant">@color/red_200</item>
         <item name="colorOnPrimary">@color/white</item>
-        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:textColorPrimary">@color/black</item>
 
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
 
