--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -36,27 +36,39 @@
 
             </androidx.cardview.widget.CardView>
 
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
+                <com.faltenreich.skeletonlayout.SkeletonLayout
+                    android:id="@+id/skeletonLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="24dp"
+                        android:orientation="vertical">
+                        <TextView
+                            android:id="@+id/tv_name_profile"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="20dp"
+                            android:textStyle="bold"
+                            android:layout_marginBottom="8dp"
+                            android:textColor="@color/black"
+                            android:layout_marginHorizontal="24dp" />
+                        <TextView
+                            android:id="@+id/tv_email_profile"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="14dp"
+                            android:textColor="@color/h2"
+                            android:layout_marginHorizontal="24dp" />
+                    </LinearLayout>
 
-                <TextView
-                    android:id="@+id/tv_name_profile"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="20dp"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"
-                    android:layout_marginTop="24dp"
-                    android:layout_marginHorizontal="24dp" />
-                <TextView
-                    android:id="@+id/tv_email_profile"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="14dp"
-                    android:textColor="@color/h2"
-                    android:layout_marginHorizontal="24dp" />
+                </com.faltenreich.skeletonlayout.SkeletonLayout>
 
                 <Button
                     android:id="@+id/btn_logout"
@@ -76,6 +88,7 @@
                 </Button>
 
             </LinearLayout>
+
 
 
         </LinearLayout>
