--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,11 +14,13 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:paddingBottom="54dp"
             android:scrollbars="none">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingBottom="24dp"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -79,7 +81,7 @@
                 </RelativeLayout>
 
                 <com.faltenreich.skeletonlayout.SkeletonLayout
-                    android:id="@+id/skeletonLayout"
+                    android:id="@+id/skeletonCategoryLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
@@ -91,6 +93,7 @@
                         android:layout_marginEnd="16dp"
                         android:layout_marginBottom="24dp"
                         android:orientation="horizontal"
+                        android:overScrollMode="never"
                         tools:listitem="@layout/item_category_card"/>
 
                 </com.faltenreich.skeletonlayout.SkeletonLayout>
@@ -123,6 +126,23 @@
 
                 </RelativeLayout>
 
+                <com.faltenreich.skeletonlayout.SkeletonLayout
+                    android:id="@+id/skeletonDestinasiLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rv_destinasi"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:paddingStart="24dp"
+                        android:paddingEnd="16dp"
+                        android:clipToPadding="false"
+                        android:overScrollMode="ifContentScrolls"
+                        tools:listitem="@layout/item_destinasi_card"/>
+
+                </com.faltenreich.skeletonlayout.SkeletonLayout>
 
             </LinearLayout>
 
