--- a/app/src/main/res/layout/item_destinasi_card.xml
+++ b/app/src/main/res/layout/item_destinasi_card.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/idDestinasi"
+    android:id="@+id/cv_destinasi_card"
     android:layout_width="225dp"
     android:layout_height="340dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="24dp">
+    android:layout_marginEnd="8dp"
+    app:cardCornerRadius="12dp">
 
     <ImageView
         android:layout_width="match_parent"
@@ -20,6 +21,7 @@
         android:layout_gravity="bottom">
 
         <TextView
+            android:id="@+id/tv_destinasi_card_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Title"
@@ -40,6 +42,7 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginEnd="4dp"/>
             <TextView
+                android:id="@+id/tv_destinasi_card_location"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="Location"
