--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
 
     <color name="h2">#919191</color>
     <color name="grey">#EFEFEF</color>
+    <color name="greysmoke">#5C5C5C</color>
 
     <color name="red_200">#E33F20</color>
     <color name="red_500">#CC2C0E</color>
