--- a/app/src/main/res/layout/item_category_destinasi_card.xml
+++ b/app/src/main/res/layout/item_category_destinasi_card.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/cv_destinasi_card"
-    android:layout_width="225dp"
-    android:layout_height="340dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cv_category_destinasi_card"
+    android:layout_width="match_parent"
+    android:layout_height="160dp"
     android:layout_marginEnd="8dp"
-    app:cardCornerRadius="12dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="12dp"
+    android:layout_marginBottom="8dp"
+    android:elevation="4dp">
 
     <ImageView
         android:layout_width="match_parent"
@@ -25,7 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Title"
-            android:textSize="22sp"
+            android:textSize="18sp"
             android:paddingHorizontal="12dp"
             android:textStyle="bold"
             android:textColor="@color/white" />
@@ -36,8 +38,8 @@
             android:orientation="horizontal"
             android:paddingHorizontal="12dp">
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="14dp"
+                android:layout_height="14dp"
                 android:src="@drawable/ic_location"
                 android:layout_gravity="center_vertical"
                 android:layout_marginEnd="4dp"/>
