--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,9 @@
     <color name="grey">#EFEFEF</color>
     <color name="greysmoke">#5C5C5C</color>
 
+    <color name="green">#a7f3d0</color>
+    <color name="green_700">#047857</color>
+
     <color name="red_200">#E33F20</color>
     <color name="red_500">#CC2C0E</color>
 
