--- a/app/src/main/res/layout/item_ulasan_card.xml
+++ b/app/src/main/res/layout/item_ulasan_card.xml
@@ -15,14 +15,20 @@
         android:background="@drawable/bg_rectangle_ulasan"
         android:padding="12dp">
 
-        <TextView
-            android:id="@+id/tv_title_ulasan_card"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
-            android:text="Title"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_title_ulasan_card"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Title"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        </LinearLayout>
         <TextView
             android:id="@+id/tv_isi_ulasan_card"
             android:layout_width="wrap_content"
