--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="whitesmoke">#DCDCDC</color>
 
     <color name="h2">#919191</color>
-    <color name="grey">#EFEFEF</color>
+    <color name="grey">#F4F4F4</color>
     <color name="greysmoke">#5C5C5C</color>
 
     <color name="green">#a7f3d0</color>
